--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -1,8 +1,8 @@
-.services {
+.section--no-padding-top {
     padding-top: 0;
 }
 
-.services__list {
+.services {
     display: flex;
     justify-content: center;
 }
