--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -14,13 +14,13 @@ img {
     height: auto;
 }
 
-.list {
+ul {
     list-style: none;
     padding: 0;
     margin: 0;
 }
 
-.link {
+a {
     text-decoration: none;
     font-family: inherit;
     color: inherit;
