--- a/scss/components/_advantages.scss
+++ b/scss/components/_advantages.scss
@@ -1,4 +1,4 @@
-.advantages__list {
+.advantages {
     display: flex;
     align-items: center;
 }
@@ -11,7 +11,7 @@
     }
 }
 
-.advantages__img {
+.advantages__box {
     display: flex;
     align-items: center;
     justify-content: center;
